@@ -1,3 +1,12 @@
+2008-04-23  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Oliver Hunt.
+        
+        Inlined JSObject::putDirect, for a .4% SunSpider speedup.
+        
+        I did this as a first step toward removing nodes.cpp from
+        AllInOneFile.cpp, but I'm putting that larger project aside for now.
+
 2008-04-23  Maciej Stachowiak  <mjs@apple.com>
 
         Rubber stamped by Geoff.
